# visu_streamlit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  README_update_data.md  pyproject.toml
apps/: figure_analysis.py  figure_info.py  learning_analytics_overview.py  overview_shared.py  page_registry.py  plotly_config.py  runtime_bootstrap.py  runtime_paths.py  source_state.py  streamlit_app.py
iterations/: 2026-02-16-phase0-thin-slice-bootstrap.md  2026-02-16-skill-guidelines-and-logging.md  2026-02-17-activity-usage-label-destacking.md  2026-02-17-bottleneck-activity-context-label-fix.md  2026-02-17-bottleneck-label-dedup-cross-objective-transitions.md  2026-02-17-bottleneck-multilevel-id-safe.md  2026-02-17-bottleneck-path-clarity-pass.md  2026-02-17-cross-viz-id-verification-and-transition-label-fix.md  2026-02-17-first-attempt-success-metric-matrix.md  2026-02-17-full-width-bottleneck-transition-layout.md  2026-02-17-human-readable-labels.md  2026-02-17-idee-feasible-now-analytics-pack.md  2026-02-17-module-playlist-workmode-handling.md  2026-02-17-objective-activity-matrix-heatmap.md  2026-02-17-schema-guard-artifact-freshness.md  2026-02-17-streamlit-icon-ligature-css-fix.md  2026-02-17-streamlit-label-compat-fix.md  2026-02-17-summary-first-fallback-mapping.md  2026-02-17-ui-readability-and-context-captions.md  2026-02-18-exercise-instruction-row-drilldown.md  2026-02-18-exercise-placeholder-image.md  2026-02-18-main-page-ux-cleanup.md  2026-02-18-matrix-click-exercise-drilldown.md  2026-02-18-matrix-click-only-drilldown.md  (+82 more)
ressources/: DATA_HANDLING.md  (+16 more)
(+172 files in other folders)
